--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <!doctype html>
 <html>
 <head>
-<title>Maintainance Page</title>
+<title>B2BC Watson Testing</title>
 <meta charset="utf-8"/>
 <meta name="robots" content="noindex"/>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <style>
-  body { text-align: center; padding: 150px; background: black;}
-  h1 { font-size: 50px; color:white; }
-  body { font: 20px Helvetica, sans-serif; color: white; }
+  body { text-align: center; padding: 150px; background: white;}
+  h1 { font-size: 50px; color:black; }
+  body { font: 20px Helvetica, sans-serif; color: black; }
   article { display: block; text-align: left; width: 650px; margin: 0 auto; }
   a { color: #dc8100; text-decoration: none; }
   a:hover { color: #333; text-decoration: none; }
@@ -43,9 +43,9 @@
 <article>
     <h1>IBM B2B Commerce for Procurement</h1>
     <div>
-        <p>B2BC Welcome Page to AIISA</p>
+        <p>This is a B2BC Watson Testing Page. It is running on HTTPD Server</p>
         <p>Thank you for Testing</p>
-        <p>Team</p>
+        <p>IT&AMS</p>
     </div>
 </article>
 </body>
