--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 <article>
     <h1>IBM B2B Commerce for Procurement</h1>
     <div>
-        <p>This is a B2BC Watson Testing Page. It is running on HTTPD Server</p>
+        <p>This is a B2BC Watson Testing Page. It is running on nginx Server</p>
         <p>Thank you for Testing</p>
         <p>IT&AMS</p>
     </div>
